# ibantu-erpnext-frappe-theme

./: .gitignore  BUILD_ERROR_EXPLANATION.md  CHANGELOG.md  CLIENT_INSTALL_FIX.md  CONTRIBUTING.md  FIX_SUMMARY.md  FIX_SUMMARY_v1.0.2.md  INSTALL.md  INSTALL_INSTRUCTION_CLIENT.md  MANIFEST.in  PRE_PUSH_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  TECHNICAL.md  TROUBLESHOOTING.md  VISUAL_GUIDE.md  install.sh  package.json  pyproject.toml  setup.py
ibantu_theme/: __init__.py  build.json  hooks.py  modules.txt
ibantu_theme/config/: desktop.py  docs.py
ibantu_theme/overrides/user/: user.py
ibantu_theme/public/css/: ibantu-canary.css  ibantu-golden.css
ibantu_theme/public/js/: ibantu-theme-init.js  ibantu.bundle.js  theme-switcher.js
ibantu_theme/public/scss/: ibantu.bundle.scss
