[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ibantu_theme"
authors = [
    {name = "Ibantu Team", email = "admin@ibantu.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "frappe"
]

[project.urls]
Home = "https://github.com/dodichakill/ibantu-erpnext-frappe-theme"

[tool.bench.dev-dependencies]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.coverage.run]
omit = ["*/tests/*"]
